--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,27 @@
 input:focus {
   outline: none;
 }
+
+::-webkit-scrollbar {
+  width: 2px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #6d6d6d;
+}
+
+.popup-content {
+  padding: 0;
+  border: 1px solid #047857;
+  border-radius: 8px;
+  top: -20vh;
+}
